--- a/Webdesign.css
+++ b/Webdesign.css
@@ -12,6 +12,7 @@ body {
 }
 
 .hero-image {
+    display: flex;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)) url("img11.jpg");
     height: 50%;
     background-position: center;
@@ -25,10 +26,10 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color:white;
+    color:#ff0606;
 }
 
 
-.homepage {
+.h1 {
     background-color: red;
 }
