--- a/Webdesign.css
+++ b/Webdesign.css
@@ -19,6 +19,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    padding: 30%;
 }
 .hero-text {
     text-align: center;
@@ -26,7 +27,8 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color:#ff0606;
+    color:#0e90a4;
+    padding: 10%;
 }
 
 
