--- a/Webdesign.css
+++ b/Webdesign.css
@@ -7,12 +7,7 @@
 
 
 @font-face {
-  font-family: "Open Sans", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 12px;
-  font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
+  font-family: ;
 }
 
 body {
