--- a/Webdesign.css
+++ b/Webdesign.css
@@ -68,34 +68,12 @@ li {
     display: inline;
     margin-right: 10px;
 }
-.headline1 {
-    display: flex;
-    flex-direction: column;
-    width: 40%;
-    float: left;
-    background-color: #cecece;
-    padding: 14%;
-}
-.headline2 {
-    display: flex;
-    flex-direction: column;
-    width: 40%;
-    float: center;
-    background-color: #cecece;
-    padding: 14%;
-}
-.headline3 {
-    display: flex;
-    flex-direction: column;
-    width: 40%;
-    float: right;
-    background-color: #cecece;
-    padding: 14%;
-}
+
 
 .twin-columns h2 {
     display: inline-block;
     text-align: center;
+
 }
 .twin-columns {
     display: inline-block;
@@ -157,19 +135,10 @@ li {
 }
 
 .the-big-column {
-    padding: 15%;
-    background-image: url("img10.jpg");
-    background-repeat: no-repeat;
-    background-position: center top;
+    padding: 10%;
     position: relative;
     background-color: #cecece;
 }
-.the-big-column h2 {
-    position: absolute;
-    right: 69.8%;
-    bottom: 30%;
-}
-
 
 
 .contact {
@@ -192,43 +161,12 @@ li {
     padding: 4.1%;
     background: rgba(230, 230, 230, 0.5);
 }
-.contact h3 {
-    text-align: bottom;
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color:#ffffff;
-    padding: 10%;
-}
 
-.words2 {
-    text-align: bottom;
+footer h3 {
     position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color:#ffffff;
-    padding: 10%;
+    left: 47.9%;
 }
-.words3 {
-    text-align: left;
+footer p {
     position: relative;
-
-    padding: 5%;
-}
-.words4 {
-    text-align: left;
-    position: relative;
-    left: -93%;
-    bottom: -130%;
-    padding: 5%;
-    
-}
-.words5 {
-    text-align: right;
-    position: relative;
-    left: 1000%;
-    bottom: -130%;
-    padding: 5%;
+    left: 47.7%;
 }
